:bug: Fix content get clipped

--- a/src/app/details/common/external-reference/external-reference.component.scss
+++ b/src/app/details/common/external-reference/external-reference.component.scss
@@ -52,6 +52,7 @@
 
 .item {
   overflow: hidden; // Allows flex container to shrink properly in Firefox
+  word-break: break-word;
 }
 .external-reference-container {
   display: flex;
