--- a/src/app/details/tabs/description-tab/description-overview/description-overview.component.scss
+++ b/src/app/details/tabs/description-tab/description-overview/description-overview.component.scss
@@ -122,6 +122,7 @@
   text-align: justify;
   justify-content: flex-start;
   flex-wrap: wrap;
+  word-break: break-word;
 
   .italic {
     font-style: italic;
